Fixed Overflowing Scroll in SearchPage View for Laptop and PCs

--- a/src/Components/SearchPage/SearchPageQuoteView.css
+++ b/src/Components/SearchPage/SearchPageQuoteView.css
@@ -20,10 +20,10 @@
 }
 
 .SearchPageQuoteCard-QuotesArea{
-    width: 100vw;
+    width: 98vw;
     margin: auto;
     overflow: scroll;
-    height: 67vh;
+    height: 66vh;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
